# TelegramReferalBot

./: README.md  loader.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  states.py  utils.py
handlers/: __init__.py  start.py
keyboards/default/: keyboard.py
keyboards/inline/: menu.py
